# stripes-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  app.py  docker-compose.yml  pyproject.toml  requirements-orig.txt  requirements.txt  sa.py
scripts/: chunk_stats.py  inspect_doc.py  rebase_paths.py  rebase_paths.sql
src/stripes_rag/: __main__.py  api.py  chunker.py  cli.py  config.py  db.py  embeddings.py  fast_parser.py  indexer.py  loader.py  mcp_server.py  models.py  prompts.py  reranker.py  search.py  tracker.py
static/: app.js  index.html  style.css
